<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- 1. Top App Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/chevron_backward"
        app:title="Profile"
        app:titleCentered="true"
        app:titleTextColor="@android:color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- 2. Profile Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Inner ConstraintLayout for card content -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_padding">

                <!-- Avatar -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Name -->
                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/avatarImageView" />

                <!-- Location Icon -->
                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/location_on"
                    app:layout_constraintBottom_toBottomOf="@id/locationTextView"
                    app:layout_constraintEnd_toStartOf="@+id/locationTextView"
                    app:layout_constraintTop_toTopOf="@id/locationTextView"
                    app:tint="@color/tint" />

                <!-- Location Text -->

                <!-- Followers -->
                <TextView
                    android:id="@+id/locationTextView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_vertical_2"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toEndOf="@id/nameTextView"
                    app:layout_constraintStart_toStartOf="@id/nameTextView"
                    app:layout_constraintTop_toBottomOf="@id/nameTextView" />

                <TextView
                    android:id="@+id/followersTextView"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:gravity="center"
                    app:layout_constraintEnd_toStartOf="@id/followersTextTitle"
                    app:layout_constraintTop_toBottomOf="@id/locationIcon" />

                <TextView
                    android:id="@+id/followersTextTitle"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:gravity="center"
                    android:text="@string/followers"
                    app:layout_constraintEnd_toStartOf="@id/dividerVertical"
                    app:layout_constraintTop_toBottomOf="@id/locationIcon" />


                <!-- Vertical Divider -->
                <View
                    android:id="@+id/dividerVertical"
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:background="@color/divider_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/locationIcon" />

                <!-- Following -->
                <TextView
                    android:id="@+id/followingTextView"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@id/dividerVertical"
                    app:layout_constraintTop_toBottomOf="@id/locationIcon" />

                <TextView
                    android:id="@+id/followingTextTitle"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:gravity="center"
                    android:text="@string/following"
                    app:layout_constraintStart_toEndOf="@id/followingTextView"
                    app:layout_constraintTop_toBottomOf="@id/locationIcon" />


                <!-- Horizontal Divider -->
                <View
                    android:id="@+id/dividerHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:background="@color/divider_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/followersTextView" />

                <!-- Bio Label -->
                <TextView
                    android:id="@+id/bioLabel"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical"
                    android:text="@string/bio"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dividerHorizontal" />

                <!-- Bio Text -->
                <TextView
                    android:id="@+id/bioTextView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_2"
                    android:textColor="@color/text_title_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bioLabel" />

                <!-- Public Repos Label -->
                <TextView
                    android:id="@+id/reposLabel"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_3"
                    android:text="@string/public_repositories"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bioTextView" />

                <!-- Public Repos Count -->
                <TextView
                    android:id="@+id/reposCountTextView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_2"
                    android:textColor="@color/text_title_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reposLabel" />

                <!-- Public Gists Label -->
                <TextView
                    android:id="@+id/gistsLabel"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_3"
                    android:text="@string/public_gists"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reposCountTextView" />

                <!-- Public Gists Count -->
                <TextView
                    android:id="@+id/gistsCountTextView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_2"
                    android:textColor="@color/text_title_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gistsLabel" />

                <!-- Updated Label -->
                <TextView
                    android:id="@+id/updatedLabel"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_3"
                    android:text="@string/updated_at"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gistsCountTextView" />

                <!-- Updated Date -->
                <TextView
                    android:id="@+id/updatedTextView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_vertical_2"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:textColor="@color/text_title_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/updatedLabel" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>